# tum-ros-pkg-code

./: rosdep.yaml
drivers/composite/composite_node/: CMakeLists.txt  manifest.xml
drivers/composite/visualizer_fusion/: CMakeLists.txt  manifest.xml
drivers/kuka_fri/: CMakeLists.txt  arms.launch  manifest.xml
drivers/kuka_fri/msg/: ImpedanceCommand.msg
drivers/kuka_fri/scripts/: fri_hand.src  give_realtime_permissions.sh  limiter.m  sps.sub
drivers/kuka_fri/src/: CartesianImpedance.cc  CartesianImpedance.hh  FRICheck.cc  FRICheck.hh  FRIComm.cc  FRIComm.hh  FRIData.hh  ROSComm.cc  ROSComm.hh  YARPComm.cc  YARPComm.hh  main.cc
drivers/kuka_fri/test/: FRICheck_legacy.cc  FRICheck_legacy.hh  Makefile  fri_dummy_arm.cc  limits_recording_left  limits_recording_right  test_checker.cc  test_structs.c  verify_limits.cc  verify_limits.gnuplot
drivers/sick_lms400/: CMakeLists.txt  manifest.xml
drivers/sick_lms400/src/: lms400_node.cpp  sick_lms400.cpp
drivers/swissranger/: CMakeLists.txt  manifest.xml  sr4k.launch
drivers/swissranger/include/: swissranger.h
drivers/swissranger/src/: swissranger.cpp  swissranger_test_node.cpp  swissranger_viewer.cpp
drivers/swissranger/srv/: SRDumpToggle.srv
highlevel/ias_drawer_executive/: CMakeLists.txt  grips  mainpage.dox  manifest.xml
highlevel/ias_drawer_executive/action/: CloseContainer.action  CloseHandle.action  Generic.action  OpenContainer.action  OperateHandle.action  PickBottle.action  PickPlate.action
highlevel/ias_drawer_executive/data/: 12_5mm
highlevel/ias_drawer_executive/launch/: ar_pose_pr2_forearm.launch  ar_pose_pr2_forearm_l.launch  arm_ik.launch  arm_ik_l.launch  demo_fall2010.vcg  demo_fall2010_rviz.launch  grip.launch  ias_drawer_executive.launch  openni_node.launch  pcl.launch  pr2_2dnav.launch  teleop_keyboard.launch  wopcl.launch
highlevel/ias_drawer_executive/scripts/: drive_around_fridge_anticlockwise.launch  drive_around_fridge_clockwise.launch  drive_around_island_anticlockwise.launch  drive_around_island_clockwise.launch  drive_around_oven_anticlockwise.launch  drive_around_oven_clockwise.launch  drive_around_sinkcounter_anticlockwise.launch  drive_around_sinkcounter_clockwise.launch
highlevel/ias_drawer_executive/src/: Accelerometer.cpp  Approach.cpp  ArticulationModelling.cpp  AverageTF.cpp  CartesianViaJoint.cpp  Constraints.cpp  Current.cpp  DemoScripts.cpp  Geometry.cpp  GraspClusterClient.cpp  Gripper.cpp  Head.cpp  Keywords.cpp  Kinect.cpp  Marker.cpp  Measures.cpp  ObjectLocalizer.cpp  OperateHandleController.cpp  OperateHandleServer.cpp  Perception3d.cpp  Poses.cpp  Pressure.cpp  RobotArm.cpp  RobotDriver.cpp  SegmentFurnitureInteractive.cpp  SnapMapICP.cpp  TestClient.cpp  Torso.cpp  WorkspaceFilter.cpp  driver.cpp  ias_drawer_executive.cpp  park_arms.cpp  teleop_pr2_keyboard.cpp
locations/jlo/: CMakeLists.txt  lo-init.ini
locations/jlo/source/: RosLoService.cpp  RosLoService.h
perception/cognitive_perception/: CMakeLists.txt  manifest.xml
perception/cognitive_perception/include/: Algorithm.h  AlgorithmEval.h  AlgorithmSelector.h  AttentionAlgorithm.h  AttentionManager.h  Class.h  Comm.h  Descriptor.h  Elem.h  ElemTypes.h  Image.h  ImageInputSystem.h  LogFile.h  NamedDescriptor.h  Object.h  PerceptionPrimitive.h  ProveAlgorithm.h  ROSComm.h  ROSjloComm.h  Reading.h  RefineAlgorithm.h  RelPose.h  RelPoseFactory.h  RemoteAttention.h  Sensor.h  Signature.h  SignatureDB.h  TrackAlgorithm.h  VisFinder.h  VisLearner.h  XMLTag.h  cop.h  himage2iplimage.h
perception/cognitive_perception/source/: AlgorithmEval.cpp  AlgorithmSelector.hpp  AttentionAlgorithm.cpp  AttentionManager.cpp  Class.cpp  Descriptor.cpp  Elem.cpp  ImageInputSystem.cpp  LocateAlgorithm.cpp  LogFile.cpp  Object.cpp  ROSComm.cpp  ROSjloComm.cpp  Reading.cpp  RefineAlgorithm.cpp  RelPose.cpp  RelPoseFactory.cpp  Sensor.cpp  Signature.cpp  SignatureDB.cpp  TrackAlgorithm.cpp  VisFinder.cpp  VisLearner.cpp  XMLTag.cpp  main.cpp
perception/cognitive_perception/src/: AlgorithmEval.cpp  AlgorithmSelector.hpp  AttentionManager.cpp  Descriptor.cpp  LocateAlgorithm.cpp  LogFile.cpp  Object.cpp  ROSComm.cpp  ROSjloComm.cpp  Reading.cpp  RelPose.cpp  RelPoseFactory.cpp  Sensor.cpp  Signature.cpp  SignatureDB.cpp  TrackAlgorithm.cpp  VisLearner.cpp  XMLTag.cpp  main.cpp
perception/cop/: .gitignore  CMakeLists.txt  Makefile  README  cop.launch  icub_cop.launch  libcop.pc.in  manifest.xml
perception/cop/include/: Action.h  Algorithm.h  AlgorithmEval.h  AlgorithmSelector.h  AttentionManager.h  Blob.h  BlobLocalizer.h  CalTab.h  Calmann.h  Camera.h  CameraDriver.h  CheckColorClass.h  Class.h  ClusterDetector.h  ColorBased.h  ColorClass.h  ColorModel.h  CombinedShapeDescr.h  Comm.h  DeformShapeBased.h  DeformShapeModel.h  Descriptor.h  DescriptorBased.h  Elem.h  Filter.h  FindCalTab.h  HalconCalib.h  Image.h  ImageInputSystem.h  Likelihood.h  LocateAlgorithm.h  LogFile.h  NetworkCamera.h  Object.h  PRAShapeVsPointDescr.h  Particle.h  PointDescrModel.h  ProveAlgorithm.h  RFAColorByShape.h  RFADepthRefinement.h  (+36 more)
perception/cop/source/: Action.cpp  Algorithm.hpp  AlgorithmEval.cpp  AlgorithmSelector.hpp  AttentionManager.cpp  Blob.cpp  BlobLocalizer.cpp  CalTab.cpp  Calmann.cpp  Camera.cpp  CameraDriver.cpp  CheckColorClass.cpp  Class.cpp  ClusterDetector.cpp  ColorBased.cpp  ColorModel.cpp  CombinedShapeDescr.cpp  DeformShapeBased.cpp  DeformShapeModel.cpp  Descriptor.cpp  DescriptorBased.cpp  DxfReader.cpp  Elem.cpp  File.cpp  Filter.cpp  FindCalTab.cpp  Image.cpp  ImageInputSystem.cpp  Likelihood.cpp  LocateAlgorithm.cpp  LogFile.cpp  NetworkCamera.cpp  Object.cpp  PRAShapeVsPointDescr.cpp  Particle.cpp  PointDescrModel.cpp  ProveAlgorithm.cpp  RFAColorByShape.cpp  RFADepthRefinement.cpp  RFAPointDescrByShape.cpp  (+36 more)
perception/image_algos/: CMakeLists.txt  mainpage.dox  manifest.xml  plugins.xml
perception/image_algos/data/: colors.txt  colors.yaml
perception/image_algos/launch/: color_detection_rss_demo.launch  detect_circle2d.launch  find_color_hsv.launch  (+10 more)
utils/teleop_wii/: CMakeLists.txt  manifest.xml
(+1720 files in other folders)
